--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <!-- use UTF-8 for everything -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <android.sdk.path>${bamboo.androidhome}</android.sdk.path>
     </properties>
 
     <dependencies>
